src/objects/BFM_NF_e_DF__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automatic_Validation_Ability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Validation Ability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFOP__c</fullName>
        <label>CFOP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Cargo_Dispatcher__c</fullName>
        <label>CNPJ Cargo Dispatcher</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Goods_Sender__c</fullName>
        <label>CNPJ Goods Sender</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Recipient__c</fullName>
        <label>CNPJ Recipient</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Service_Taker__c</fullName>
        <label>CNPJ Service Taker</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNPJ Taker</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NF_e_DFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNPJ_issuer__c</fullName>
        <label>CNPJ issuer</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Cargo_Dispatcher__c</fullName>
        <label>City Cargo Dispatcher</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code_Goods_Sender__c</fullName>
        <label>City Code Goods Sender</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code_Issuer__c</fullName>
        <label>City Code Issuer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Recipient__c</fullName>
        <label>City Recipient</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Service_Taker__c</fullName>
        <label>City Service Taker</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NF_e_DFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_Mode__c</fullName>
        <label>Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emission_Type__c</fullName>
        <label>Emission Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fisco_Additional_Information__c</fullName>
        <label>Fisco Additional Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MIRO_Date__c</fullName>
        <label>MIRO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MIRO_No__c</fullName>
        <label>MIRO No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIRO_Status__c</fullName>
        <label>MIRO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miro Posted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NF_e_Number__c</fullName>
        <label>NF-e Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Reception__c</fullName>
        <label>NF-e Reception</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NF_e_Serie__c</fullName>
        <label>NF-e Serie</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Type__c</fullName>
        <label>NF-e Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_key__c</fullName>
        <label>NF-e key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_version__c</fullName>
        <label>NF-e version</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFe_Ambient_Type__c</fullName>
        <label>NFe Ambient Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFe_Emission_date_time__c</fullName>
        <label>NFe Emission date_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NFe_Protocol_Number__c</fullName>
        <label>NFe Protocol Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFe_Status_Description__c</fullName>
        <label>NFe Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFe_Status__c</fullName>
        <label>NFe Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Necessary_Scanned_PoD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necessary Scanned PoD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Physical_NF_e__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical NF-e</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PoD_Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoD Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PoD_Scanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoD Scanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Rendering_Value__c</fullName>
        <label>Service Rendering Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taker_Type__c</fullName>
        <label>Taker Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Cargo_Dispatcher__c</fullName>
        <label>UF Cargo Dispatcher</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Goods_Sender__c</fullName>
        <label>UF Goods Sender</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Issuer__c</fullName>
        <label>UF Issuer</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Recipient__c</fullName>
        <label>UF Recipient</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF_Service_Taker__c</fullName>
        <label>UF Service Taker</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Plate__c</fullName>
        <label>Vehicle Plate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NF_e_DFs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NF-e DF</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NF-e DF-{000000}</displayFormat>
        <label>NF-e DF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF-e DFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>